--- a/template/search.html
+++ b/template/search.html
@@ -13,7 +13,7 @@
                   </select>
                 <input type="text" name="q" style="width: 75% !important; position: absolute;" class="form-control" placeholder="Search">
                 </div>
-                <button type="submit" class="btn btn-default" style="left: 79%; position:relative;">Submit</button>
+                <button type="submit" class="btn btn-default" style="left: 80%; margin-top: 10px; position:relative;">Submit</button>
             </form>
             {% if request.args %}
             <a href="{{ url_for('index.home') }}">
